--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,312 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  padding: 94px 0 90px;
+}
+
+.header__menu {
+  justify-self: center;
+  padding: 0 3vw 0 2vw;
+}
+
+.header__link-list {
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+  font-size: 18px;
+  line-height: normal;
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__link {
+  text-underline-position: under;
+}
+
+.header__logo {
+  display: block;
+  justify-self: center;
+  padding-right: 23px;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+}
+
+.address {
+  justify-self: end;
+  padding-right: 65px;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 1.35;
+  text-underline-position: under;
+}
+
+.cover {
+  position: relative;
+  z-index: -1;
+  min-height: 757px;
+  padding: 165px 50px 47px 50px;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0/ 0.6);
+}
+
+.cover__title {
+  position: relative;
+  z-index: 1;
+  display: block;
+  color: #fff;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 1.15;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  display: block;
+  line-height: 1.37;
+  text-align: center;
+}
+
+.aligned-text_right {
+  display: block;
+  line-height: 1.05;
+  letter-spacing: 30px;
+  text-align: end;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: normal;
+}
+
+.cover__description {
+  position: relative;
+  z-index: 1;
+  padding-top: 133px;
+  color: #fff;
+  font-size: 22px;
+  line-height: 1.27;
+  text-align: end;
+  text-transform: uppercase;
+}
+
+.cover__description-text {
+  display: inline;
+  margin-right: 56px;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  display: inline;
+  border: 1px solid #fff;
+  padding: 12px 32px;
+  color: #fff;
+  font-size: 22px;
+  line-height: 1.27;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.lots {
+  min-height: 759px;
+  padding: 180px 50px 0;
+}
+
+.lots__heading {
+  padding: 0 0 27px 40px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  padding-bottom: 30px;
+  list-style: none;
+}
+
+.lots__card-list-item {
+  flex-grow: 1;
+  max-width: 430px;
+  min-height: 450px;
+}
+
+.card-link {
+  display: block;
+  height: 100%;
+  text-decoration: none;
+}
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 48px 40px 50px;
+  color: #fff;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+  z-index: 1;
+  font-weight: 700;
+  font-size: 22px;
+  font-size: 22px;
+  line-height: 1.2;
+  text-decoration-line: underline;
+  text-decoration-thickness: 1.4px;
+  text-transform: uppercase;
+}
+
+.card__text {
+  z-index: 1;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.lots__look-more-link {
+  margin-left: 40px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: normal;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-position: under;
+}
+
+.about {
+  padding: 180px 50px 0;
+}
+
+.about__column {
+  display: grid;
+  grid-template-columns: minmax(200px, 430px) 1fr;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+  column-gap: 25px;
+}
+
+.about__logo {
+  display: flex;
+  justify-self: center;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: black;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  padding-top: 7px;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  grid-column: 2/3;
+  gap: 25px;
+  padding-top: 3px;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: start;
+  padding: 180px 50px 90px;
+}
+
+.footer .address {
+  justify-self: start;
+}
+
+.footer__menu {
+  justify-self: center;
+}
+
+.footer__menu-list {
+  font-size: 18px;
+  list-style: none;
+}
+
+.footer__menu-item {
+  text-align: center;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__menu-link {
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  justify-self: end;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
