Вторая отправка на третье ревью

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
 /* Прошу прощения, при активном изучении макета 
 в Figma, случайно сдвинул header в сторону и корректировал изначально
 неправилно, что и порадило мое сильное недоумение и несколько
-вечеров раздумий, надеюсь сейчас все хорошо:) */
+вечеров раздумий, надеюсь сейчас все хорошо:) 
+*/
 
 .header {
   display: grid;
